--- a/public/css/head/style.css
+++ b/public/css/head/style.css
@@ -1,48 +1,120 @@
-header > ul{
+header > .container > .row > ul{
 	margin: 0 auto;
 	text-align: center;
 	padding: 0;
+	float: right;
+	display: block;
+	height: 100%;
 }
 
-header > ul > li:nth-child(1){
-	margin-left: 0;
+ul:after {
+    display: block;
+    content: ' ';
+    clear: both;
+    float: none;
 }
 
-header > ul > li > a{
-	text-decoration: none;	
-	color: #ff8327 !important;
+header > .container > .row > ul > li {
+	position: relative;
+	float: left;
+	height: 100%;
 }
 
-header > ul > li{
-	margin-top: 30px;
-	margin-bottom: 30px;
-	display: inline-block;
-	margin-left: 50px;
-	color: #ff8327;
+header > .container > .row > ul > li > ul {
+	position: absolute;
+	display: none;
+    top: 37px;
+    padding: 0px;
+    text-align: left;
+    border-top: #e8e8e8 solid 1px;
+    width: 140px;
+    margin-top: 53px;
+    background-color: #fff;
+    z-index: 2;
+}
+
+header > .container > .row > ul > li > ul > li {
+	display: block;
+	line-height: 1.5;
+}
+
+header > .container > .row > ul > li > ul > li > a {
+	display: block;
+	color: #757575;
+	padding: 5px 0px 5px 10px;
+	text-decoration: none;
+}
+
+header > .container > .row > ul > li:hover > ul{
+	display: block;
+}
+
+header > .container > .row > ul > li > ul > li:hover {
+	background-color: #000;
+	color: #fff;
+	transition: 0.5s;
+	background-color: rgb(51, 51, 51);
+}
+
+header > .container > .row > ul > li > ul > li > a:hover {
+	color: #fff;
+}
+.logo{
+	float: left;
+	height: 100%;
+}
+
+.logo > h1 {
+	margin-top: 0px;
+	margin-bottom: 0px;
 	font-size: 16px;
+	line-height: 5.5;
 }
 
-header{
-	background-color: #295691;
-	width: 100%;
+.logo > h1 > a{
+	text-decoration: none;	
+	color: #000 !important;
+	height: 100%;
 }
 
 .row{
 	margin-left: 0 !important;
 	margin-right: 0 !important;
+	height: 100%;
 }
 
 .container{
-	width: auto !important;
-	margin: 0 !important;
-	padding: 0 !important;
+	width: 900px !important;
+	height: 100%;
+}
+
+header > .container > .row > ul > li > a{
+	text-decoration: none;	
+	color: #000 !important;
+    display: block;
+}
+
+header > .container > .row > ul > li{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	display: inline-block;
+	margin-left: 20px;
+	font-size: 16px;
+	line-height: 5.5;
+}
+
+header{
+	background-color: #fff;
+	height: 90px;
 }
 
 footer{
+	border-top: 4px double #ECECEC;
 	text-align: center;
+	width: 100%;
 }
 
-img{
+footer img{
 	width: 40px;
 	height: 40px;
 	margin-top: 30px;
