--- a/public/css/head/style.css
+++ b/public/css/head/style.css
@@ -1,10 +1,10 @@
-header > .container > .row > ul{
+.mnu{
 	margin: 0 auto;
 	text-align: center;
 	padding: 0;
 	float: right;
 	display: block;
-	height: 100%;
+	height: 100%;	
 }
 
 ul:after {
@@ -14,13 +14,13 @@ ul:after {
     float: none;
 }
 
-header > .container > .row > ul > li {
+header  .container  .row  ul  li {
 	position: relative;
 	float: left;
 	height: 100%;
 }
 
-header > .container > .row > ul > li > ul {
+header  .container  .row  ul  li  ul {
 	position: absolute;
 	display: none;
     top: 37px;
@@ -33,30 +33,33 @@ header > .container > .row > ul > li > ul {
     z-index: 2;
 }
 
-header > .container > .row > ul > li > ul > li {
+header  .container  .row  ul  li  ul  li {
 	display: block;
 	line-height: 1.5;
+	width: inherit;
+    margin-left: 0;
 }
 
-header > .container > .row > ul > li > ul > li > a {
+header  .container  .row  ul li  ul  li  a {
 	display: block;
 	color: #757575;
 	padding: 5px 0px 5px 10px;
 	text-decoration: none;
+	width: inherit;
 }
 
-header > .container > .row > ul > li:hover > ul{
+header  .container  .row  ul  li:hover  ul{
 	display: block;
 }
 
-header > .container > .row > ul > li > ul > li:hover {
+header  .container  .row  ul  li  ul  li:hover {
 	background-color: #000;
 	color: #fff;
 	transition: 0.5s;
 	background-color: rgb(51, 51, 51);
 }
 
-header > .container > .row > ul > li > ul > li > a:hover {
+header  .container  .row  ul  li  ul  li  a:hover {
 	color: #fff;
 }
 .logo{
@@ -64,37 +67,37 @@ header > .container > .row > ul > li > ul > li > a:hover {
 	height: 100%;
 }
 
-.logo > h1 {
+.logo  h1 {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	font-size: 16px;
 	line-height: 5.5;
 }
 
-.logo > h1 > a{
+.logo  h1  a{
 	text-decoration: none;	
 	color: #000 !important;
 	height: 100%;
 }
 
-.row{
+header .row{
 	margin-left: 0 !important;
 	margin-right: 0 !important;
 	height: 100%;
 }
 
-.container{
+header .container{
 	width: 900px !important;
 	height: 100%;
 }
 
-header > .container > .row > ul > li > a{
+header  .container  .row  ul  li  a{
 	text-decoration: none;	
 	color: #000 !important;
     display: block;
 }
 
-header > .container > .row > ul > li{
+header  .container  .row  ul  li{
 	margin-top: 0px;
 	margin-bottom: 0px;
 	display: inline-block;
@@ -121,7 +124,7 @@ footer img{
 	margin-bottom: 10px;
 }
 
-footer > a{
+footer  a{
 	width: 40px;
 	height: 40px;
 }
