--- a/public/css/home-page/style.css
+++ b/public/css/home-page/style.css
@@ -321,13 +321,21 @@ body {
 } 
 
 .button{
-  background-color: #fff;
-  border: 1px solid #E6E6E6;
-  color: #8c8c8c; 
-  width: 160px;
-  height: 45px;
-  margin-bottom: 40px;
-  margin-left: calc(50% - 85px);
+    margin-top: 20px;
+    background-color: #fff;
+    border: 1px solid #E6E6E6;
+    color: #8c8c8c;
+    display: block;
+    width: 160px;
+    height: 45px;
+    margin-bottom: 40px;
+    margin-left: calc(50% - 85px);
+    cursor: pointer;
+}
+.button span{
+    margin-top: 10px;
+    text-align: center;
+    display: block;
 }
 
 .button:hover{
@@ -335,6 +343,8 @@ body {
   color: #fff;
   transition: 0.5s;
   background-color: rgb(51, 51, 51);
+    text-decoration: none;
+
 }
 
 .preview-sheets{
