--- a/public/css/home-page/style.css
+++ b/public/css/home-page/style.css
@@ -285,9 +285,8 @@ body {
 
 .news{
   border-bottom: 4px double #ECECEC;
-  margin-bottom: 30px;
   max-width: 940px;
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
 }
 
 .news h4{
@@ -321,41 +320,25 @@ body {
 }
 
 .button span{
-    margin-left: 18px;
-    margin-top: 10px;
+    margin-top: 12px;
     display: block;
+    text-align: center;
 }
 
 .button{
-<<<<<<< HEAD
     background-color: #fff;
     border: 1px solid #E6E6E6;
-    display: block;
     color: #8c8c8c;
-=======
     margin-top: 20px;
-    background-color: #fff;
-    border: 1px solid #E6E6E6;
-    color: #8c8c8c;
     display: block;
->>>>>>> 7700e03c274437619f0ee6393dc4a4f08371db68
-    width: 160px;
-    height: 45px;
+    width: 200px;
+    height: 50px;
     margin-bottom: 40px;
     margin-left: calc(50% - 85px);
     cursor: pointer;
-<<<<<<< HEAD
-=======
-}
-.button span{
-    margin-top: 10px;
-    text-align: center;
-    display: block;
->>>>>>> 7700e03c274437619f0ee6393dc4a4f08371db68
 }
 
 .button:hover{
-  background-color: #000;
   color: #fff;
   transition: 0.5s;
   background-color: rgb(51, 51, 51);
@@ -392,7 +375,6 @@ body {
 }
 
 .preview-sheets button:hover{
-  background-color: #000;
   color: #fff;
   transition: 0.5s;
   background-color: rgb(51, 51, 51);
@@ -445,7 +427,6 @@ body {
 }
 
 .video-div button:hover{
-  background-color: #000;
   color: #fff;
   transition: 0.5s;
   background-color: rgb(51, 51, 51);
