--- a/public/css/head/style.css
+++ b/public/css/head/style.css
@@ -14,13 +14,14 @@ ul:after {
     float: none;
 }
 
-header  .container  .row  ul  li {
+.mnu  li {
 	position: relative;
 	float: left;
 	height: 100%;
 }
 
-header  .container  .row  ul  li  ul {
+.mnu  li  ul {
+	box-shadow: 0 6px 12px rgba(0,0,0,.175);
 	position: absolute;
 	display: none;
     top: 37px;
@@ -28,19 +29,20 @@ header  .container  .row  ul  li  ul {
     text-align: left;
     border-top: #e8e8e8 solid 1px;
     width: 140px;
-    margin-top: 53px;
+    margin-top: 51px;
     background-color: #fff;
     z-index: 2;
+	border-radius: 4px;
 }
 
-header  .container  .row  ul  li  ul  li {
+.mnu  li  ul  li {
 	display: block;
 	line-height: 1.5;
 	width: inherit;
     margin-left: 0;
 }
 
-header  .container  .row  ul li  ul  li  a {
+.mnu li  ul  li  a {
 	display: block;
 	color: #757575;
 	padding: 5px 0px 5px 10px;
@@ -48,18 +50,20 @@ header  .container  .row  ul li  ul  li  a {
 	width: inherit;
 }
 
-header  .container  .row  ul  li:hover  ul{
+.mnu  li:hover  ul{
 	display: block;
+	border-radius: 4px;
 }
 
-header  .container  .row  ul  li  ul  li:hover {
+.mnu  li  ul  li:hover {
 	background-color: #000;
 	color: #fff;
 	transition: 0.5s;
 	background-color: rgb(51, 51, 51);
+	border-radius: 4px;
 }
 
-header  .container  .row  ul  li  ul  li  a:hover {
+.mnu  li  ul  li  a:hover {
 	color: #fff !important;
 }
 .logo{
@@ -91,13 +95,17 @@ header .container{
 	height: 100%;
 }
 
-header  .container  .row  ul  li  a{
+.navbar-brand{
+	line-height: 3.2;
+}
+
+.mnu  li  a{
 	text-decoration: none;	
 	color: #000 !important;
     display: block;
 }
 
-header  .container  .row  ul  li{
+.mnu  li{
 	margin-top: 0px;
 	margin-bottom: 0px;
 	display: inline-block;
@@ -106,9 +114,68 @@ header  .container  .row  ul  li{
 	line-height: 5.5;
 }
 
+.navbar-expand-md{
+	padding: 0;
+	margin: 0;
+}
+
+.py-4{
+	padding-top: 0px !important;
+}
+
+.navbar-expand-md .navbar-nav .dropdown-menu-right{
+	border-radius: 4px;
+}
+
+.dropdown-toggle::after{
+	content: none;
+}
+
+#navbarDropdown{
+	display: inline-block;
+	float: right;
+	margin-left: 50px;
+	line-height: 5.5;
+	padding: 0;
+	height: 100%;
+	font-size: 16px;
+}
+
+.navbar{
+	border: 0px;
+}
+
+.navbar-nav{
+	float: right;
+}
+
+.dropdown-menu, .dropdown-menu-right, .show{
+	padding: 0;
+}
+
+.dropdown-item{
+	padding: 7px 1.5rem;
+}
+
+.dropdown-item:hover{
+	background-color: #000;
+	color: #fff;
+	transition: 0.5s;
+	background-color: rgb(51, 51, 51);
+	border-radius: 4px;
+}
+
+.dropdown-menu{
+	min-width: 148px;
+}
+
 header{
 	background-color: #fff;
 	height: 90px;
+}
+
+.row{
+	display: inline;
 }
 
 footer{
@@ -202,7 +269,7 @@ a:focus{
 	.menu_active{
 		display: flex;
 	}
-	header .container .row ul li{
+	.mnu li{
 		clear: left;
 	    display: block;
 	    width: 274px;
@@ -212,19 +279,25 @@ a:focus{
 	    margin-top: 0px;
 	    border-left: 1px solid #000;
 	}
-	header .container .row ul li:last-child{
+	.mnu li:last-child{
 		border-bottom: 1px solid #000;
 	}
 
-	header .container .row ul li ul{
+	.mnu li ul{
 		left: -140px;
 		top: -55px;
 		height: 47px;
 		border-top: 1px solid #000;
 	}
-	header .container .row ul li ul li{
+	.mnu li ul li{
 		border-right: 1px solid #000;
 	}
 }
 
 
+.mnu  li  ul  li:hover {
+	background-color: #000;
+	color: #fff;
+	transition: 0.5s;
+	background-color: rgb(51, 51, 51);
+}
