--- a/public/css/blog-admin/style.css
+++ b/public/css/blog-admin/style.css
@@ -33,3 +33,38 @@
 .head-table-blog{
     box-shadow: 0 0px 2px rgba(0, 0, 0, 0.49);
 }
+
+.btn-primary{
+    margin-left: 0;
+}
+
+.btn-primary{
+    margin-left: 10px;
+}
+
+.btn{
+    padding: 10px 45px;
+    display: inline-block;
+    float: left;
+    background-color: #fff;
+    text-align: center;
+    box-shadow: 0 1px 6px rgba(0,0,0,0.175);
+    cursor: pointer;
+    border-radius: 4px;
+    border-color: rgba(0,0,0,0.175);
+    color: #000;
+}
+
+.btn:hover{
+    background-color: rgb(51, 51, 51);
+    transition: 0.2s;
+}
+
+.button-edit-news-admin{
+    margin-left: 0;
+}
+
+.delete{
+    width: 50%;
+    font-size: 14px;
+}
