--- a/public/css/home-page/style.css
+++ b/public/css/home-page/style.css
@@ -196,6 +196,8 @@ body {
 }
 
 .slide-content{
+    border-radius: 5px;
+    box-shadow: 0 1px 32px rgba(0,0,0,.175);
 	position: absolute;
     bottom: calc(50% - 160px);
     width: 500px;
@@ -227,6 +229,8 @@ body {
     position: relative;
     background: #000;
     margin-bottom: 40px;
+    border-radius: 5px;
+    box-shadow: 0 0px 30px rgba(0,0,0,.175);
 }
 
 .block-mnu3{
@@ -241,6 +245,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     opacity: 0.5;
+    border-radius: 5px;
 }
 
 .short-mnu h3{
@@ -286,16 +291,20 @@ body {
 .news{
   border-bottom: 4px double #ECECEC;
   max-width: 940px;
-  margin: 0 auto 30px auto;
+  margin: 0 auto ;
 }
 
 .news h4{
-  text-align: center;
-  font-size: 22px;
-  font-weight: 500;
-  color: #000;
-  text-decoration: none;
-  margin-top: 70px;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 500;
+    color: #fff;
+    text-decoration: none;
+    position: absolute;
+    display: inline-block;
+    left: 10%;
+    top: 73%;
+    z-index: 999;
 }
 
 .data1{
@@ -303,20 +312,137 @@ body {
   font-size: 13px;
   margin-bottom: 30px;
   margin-top: 20px;
+  position: absolute;
+  left: 10%;
+  top: 80%;
+  z-index: 999;
+  color: #fff;
 }
 
-.news img{
-  max-width: 100%;
-  height: auto;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+.news img {
+    max-width: 100%;
+    height: auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-shadow: 0 0px 16px rgba(33, 37, 41, 0.35);
+    border-radius: 10px;
+}
+
+.news-image{
+    width: 100%;
+    height: auto;
+    box-shadow: 0 0px 25px rgba(33, 37, 41, 0.35);
+    border-radius: 10px;
+}
+
+.img-blog-article:hover .news-image{
+    transform: scale(1.01);
+    transition: all 0.4s ease-out;
+}
+
+.img-blog-article:hover .bgc-img{
+    background-color: #000;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: .5;
+    border-radius: 10px;
+    z-index: 1;
+    transition: all 0.4s ease-out;
+}
+
+.bgc-img{
+    background-color: #000;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: .5;
+    border-radius: 10px;
+}
+
+.img-blog-article{
+    border-radius: 10px;
+    position: relative;
+    width: auto;
+    height: auto;
+    display: block;
+    margin: 50px auto 25px;
+    cursor: pointer;
+    overflow: hidden;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.47);
+}
+
+.news-description{
+    z-index: 5;
+    position: absolute;
+    margin: -230px 130px;
 }
 
 .blog-text1, .blog-text2{
   margin-top: 20px;
   margin-bottom: 25px;
   line-height: 1.5;
+  font-size: 17px;
+}
+
+.button{
+    margin: 0 auto 75px;
+    width: 180px;
+    height: 45px;
+    background-color: #fff;
+    position: relative;
+    text-align: center;
+    clear: left;
+    padding-top: 10px;
+    border: 1px solid #0b2e13;
+    border-radius: 5px;
+}
+
+.button:before,
+.button:after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    box-sizing: border-box;
+}
+.button:before {
+    bottom: 0;
+    left: 0;
+    border-left: 1px solid #0b2e13;
+    border-top: 1px solid #0b2e13;
+    border-radius: 5px;
+}
+.button:after {
+    top: 0;
+    right: 0;
+    border-right: 1px solid #0b2e13;
+    border-bottom: 1px solid #0b2e13;
+    border-radius: 5px;
+}
+.button:hover:before,
+.button:hover:after{
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+}
+.button:hover:before {transition: 0s ease opacity 0s, .2s ease height, .2s ease width .2s;}
+.button:hover:after {transition: 0s ease opacity .4s, .2s ease height .4s , .2s ease width .6s;}
+.button:hover {
+    background: rgba(255,255,255,.2);
+    border: none;
+    padding-top: 11px;
+}
+
+.button-link{
+    color: #000;
+}
+
+.button-link:hover{
+    text-decoration: none;
+    color: #000;
 }
 
 .button_read span{
@@ -360,8 +486,11 @@ body {
 
 .preview-sheets p{
   margin-top: 0;
-  display: inline;
   margin-bottom: 30px;
+}
+
+.download-btn{
+    margin-left: 0;
 }
 
 .preview-sheets button{
