--- a/public/css/blog-page/style.css
+++ b/public/css/blog-page/style.css
@@ -1,10 +1,23 @@
+.news-body{
+	width: 100%;
+	margin: 50px auto;
+}
+
 .mainImg img{
 	width: 100%;
 	height: auto;
+	margin: 0 auto;
+	box-shadow: 0 0px 25px rgba(33, 37, 41, 0.35);
+	border-radius: 10px;
 }
 
 h1{
 	text-align: center;
+	font-size: 45px;
+}
+
+p, li, td{
+	font-size: 20px;
 }
 
 .data{
@@ -13,6 +26,9 @@ h1{
 }
 
 .text{
-	 margin-top: 30px;
-	 font-size: 20px;
+	font-size: 20px;
+	width: 100%;
+	margin: 50px auto;
+	max-width: 900px;
  }
+
