--- a/public/css/blog-admin/style.css
+++ b/public/css/blog-admin/style.css
@@ -1,6 +1,6 @@
 .btn-success{
     width: 200px;
-    margin-left: calc(50% - 100px);
+    margin-left: calc(50% - 230px);
     margin-top: 40px;
     margin-bottom: 40px;
 }
@@ -59,7 +59,9 @@
     background-color: rgb(51, 51, 51);
     transition: 0.2s;
 }
-
+.back{
+    margin-top: 40px;
+}
 .button-edit-news-admin{
     margin-left: 0;
 }
@@ -67,4 +69,11 @@
 .delete{
     width: 50%;
     font-size: 14px;
+}
+
+@media (max-width: 991px) {
+    .button-edit-news-admin, .delete {
+        width: 100% !important;
+        margin-bottom: 3px;
+    }
 }
