--- a/public/css/head/style.css
+++ b/public/css/head/style.css
@@ -125,6 +125,7 @@ header .container{
 
 .py-4{
 	padding-top: 0px !important;
+	min-height: 300px !important;
 }
 
 .navbar-expand-md .navbar-nav .dropdown-menu-right{
@@ -241,6 +242,7 @@ footer{
 	width: 100%;
 	display: flex;
 	flex: 0 0 auto;
+	bottom: 0;
 }
 
 footer img{
@@ -253,6 +255,10 @@ footer img{
 footer  a{
 	width: 40px;
 	height: 40px;
+}
+
+footer p{
+	margin-top: 30px;
 }
 
 a:focus{
