--- a/public/css/profile/style.css
+++ b/public/css/profile/style.css
@@ -1,55 +1,22 @@
-.item {
-    width: 200px;
-    height: 300px;
-}
-.btn {
-    float: none;
-}
-.price{
-    font-weight: bold;
-    font-size: 16px;
-}
-.thumbnail .descriprion {
-    color: #7f7f7f;
-}
-
-.sheeps{
+h1{
     text-align: center;
-    margin: 40px auto 70px;
+    margin-bottom: 30px !important;
 }
 
-.item{
-    margin: 0;
-    width: auto;
+.list-orders{
+    width: 100%;
 }
 
-.thumbnail{
-    max-width: 440px;
-    margin: 0 auto 100px;
-    border-radius: 5px;
-    box-shadow: 0 0px 20px rgba(0,0,0,.175);
-    padding: 0;
-}
-.thumbnail  img {
-    margin-right: auto;
-    margin-left: auto;
-    border-radius: 5px;
+.list-orders h1{
+    margin-top: 100px;
+
 }
 
-.descriprion{
-    font-size: 16px;
-}
-
-h3 {
-    font-size: 35px;
-}
-
-.caption{
-    padding: 20px !important;
+.panel-default{
+    width: 100%;
 }
 
 .button{
-    margin: 0 auto;
     width: 180px;
     height: 45px;
     background-color: #fff;
@@ -59,10 +26,6 @@ h3 {
     padding-top: 10px;
     border: 1px solid #0b2e13;
     border-radius: 5px;
-}
-
-.clearfix{
-    margin-top: 65px;
 }
 
 .button:before,
@@ -102,6 +65,31 @@ h3 {
     padding-top: 11px;
 }
 
-a, a:hover, a:active, a:focus{
-    color: #000;
+.button a{
+    z-index: 999;
 }
+
+a{
+    color: #000 !important;
+}
+.table-list{
+    border: 1px solid #000;
+    padding: 20px;
+}
+
+.table-list td{
+    padding: 15px;
+}
+
+.name{
+    width: 80%;
+}
+td p{
+    margin: 0;
+}
+
+.list-group-item{
+    border: 0 !important;
+}
+
+
