--- a/public/css/head/style.css
+++ b/public/css/head/style.css
@@ -257,6 +257,16 @@ footer  a{
 	height: 40px;
 }
 
+footer .visa img{
+	height: 50px;
+	width: auto;
+	margin-top: 0;
+}
+
+footer .visa b{
+	display: block;
+}
+
 footer p{
 	margin-top: 30px;
 }
